--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4"
+  },
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.3"
+
   }
 }
