--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "express-session": "^1.16.2",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.6.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "engines": {
     "npm": "6.4.1",
