--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "cookie-session": "^1.3.3",
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.6.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "engines": {
     "npm": "6.4.1",
