--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-moment": "^0.9.2"
   },
   "engines": {
     "npm": "6.4.1",
