--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,1 @@
-CLIENTID= Google client id goes here
-CLIENTSECRET= Google secret goes here
-DBURI= Mongo DB Key goes here
+SECRETMONGOKEY= Enter a secret string to protect your mongo database
