--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "cookie-session": "^1.3.3",
-    "dotenv": "^8.0.0",
-    "express": "^4.16.3",
-    "if-env": "^1.0.4",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.1",
+    "react-moment": "^0.9.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.11",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0",
-    "react-moment": "^0.9.2"
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.9.0"
   },
   "engines": {
     "npm": "6.4.1",
