--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
