--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build" : "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
